--- a/BootstrapNew/Practica7Carrusel.html
+++ b/BootstrapNew/Practica7Carrusel.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>carrusel bootstrap</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<script src="js/jquery-3.3.1.js"></script>
+	<script src="jquery-3.3.1.js"></script>
 </head>
 <body>
 <h1>Bikes</h1>
